Archive2/b4/a620e2db97afae/main.cpp
#include <iostream>
#include <string>

using namespace std;

int main() {
    string city1[] = "toronto";
    cout << city;   
}